# budg-flask

./: README.md  pyproject.toml  wsgi.py
budg/: app.py
budg-flask/: app.py  budg.py
budg-flask/templates/: result.html
budg/templates/: base.html  result.html
src/: app.py  budg.py
src/templates/: submit.html
