[tool.poetry]
name = "budg-flask"
version = "0.1.0"
description = ""
authors = ["Kyle Bouwman <kybouw@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

packages = [
    { include = "budg-flask" }
]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
